syntax = "proto3";
//标识你使用proto3语法：如果你不写这句声明，pb编译器会假设你使用的proto2。它必须是.proto文件中第一个非空、非注释的语句。

package api.student.v1;

import "google/api/annotations.proto";

option go_package = "student/api/student/v1;v1";
option java_multiple_files = true;
option java_package = "api.student.v1";

service Student {
	rpc CreateStudent (CreateStudentRequest) returns (CreateStudentReply){
		option (google.api.http) = {
			post: "/student",
			body:"*",
		};
	};
	rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentReply){
		option (google.api.http) = {
			put: "/student/{id}",
			body:"*",
		};
	};
	rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentReply){
		option (google.api.http) = {
			delete: "/student/{id}",
		};
	};
	rpc GetStudent (GetStudentRequest) returns (GetStudentReply) {
		option (google.api.http) = {
			get: "/student/{id}",
		};
	}
	rpc ListStudent (ListStudentRequest) returns (ListStudentReply){
		option (google.api.http) = {
			get: "/students",
		};
	};
}

message CreateStudentRequest {
	string name   = 1;
	int32  status = 2;
	string info = 4;
}
message CreateStudentReply {
	string name   = 1;
	int32  status = 2;
	int32  id     = 3;
	string info = 4;
}

message UpdateStudentRequest {
	string name   = 1;
	int32  status = 2;
	int32  id     = 3;
	string info = 4;
}
message UpdateStudentReply {
	string name   = 1;
	int32  status = 2;
	int32  id     = 3;
	string info = 4;
}

message DeleteStudentRequest {
	int32 id=1;
}
message DeleteStudentReply {}

message GetStudentRequest {
	int32 id = 1;
}

message GetStudentReply {
	string name   = 1;
	int32  status = 2;
	int32  id     = 3;
	string info = 4;
}

message ListStudentRequest {
	string name = 1;
}
message ListStudentReply {
	message Result{
		string name   = 1;
		int32  status = 2;
		int32  id     = 3;
		string info = 4;
	}
	repeated Result results = 1;
}